# orchid-examples

./: Dockerfile  __init__.py
api-extensions/: README.md  __init__.py  custom_app.py  orchid.yml  pyproject.toml
api-extensions/routers/: __init__.py  admin.py
basketball/: README.md  __init__.py  agents.yaml  identity.py  orchid.yml
basketball/storage/: __init__.py  sqlite.py
basketball/tests/: conftest.py  test_morning_trivia_e2e.py
basketball/tools/: __init__.py  basketball.py  psychology.py
custom-storage/: README.md  __init__.py  agents.yaml  orchid.yml
custom-storage/storage/: __init__.py  json_file.py
embedded-api/: README.md  __init__.py  my_existing_app.py  orchid.yml
embedded-python/: 01_minimal.py  02_multi_turn.py  03_streaming.py  04_hitl.py  05_custom_runtime.py  06_inline_config.py  README.md  orchid.yml
graph_kb/: README.md  __init__.py  orchid.yml
graph_kb/hooks/: __init__.py  startup.py
helpdesk/: .env.example  README.md  __init__.py  identity.py
learning/: README.md  identity.py  orchid.yml
mcp-auth/: README.md  __init__.py  orchid.yml
md-config/: README.md  agents.yaml  orchid.md  orchid.yml  test_equivalence.py
prompt-customization/: README.md  __init__.py  orchid.yml
rag-strategies/: README.md  __init__.py  orchid.yml
recipes/: README.md  __init__.py  agents.yaml  orchid.yml
restaurant/: .env.example  README.md  __init__.py  identity.py
tool-strategies/: README.md  __init__.py  agents.yaml  orchid.yml
travel-agency/: README.md  __init__.py
wiki/: README.md  __init__.py  agents.yaml  orchid.yml
(+52 files in other folders)
